# blodgett-cal

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
site/: blodgett-pool.ics  index.html
src/blodgett_cal/: __init__.py  cli.py  ics.py  models.py  parse.py  scrape.py
tests/: test_integration.py  test_parse.py  test_render_index.py  test_scrape.py
tests/fixtures/: facility-hours.html
